@@ -1,19 +1,18 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
-import com.google.gson.JsonDeserializationContext;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonSerializationContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.logging.LogUtils;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.UnaryOperator;
 import javax.annotation.Nullable;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.ComponentUtils;
-import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.util.GsonHelper;
+import net.minecraft.util.ExtraCodecs;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.loot.LootContext;
@@ -23,11 +22,20 @@ import org.slf4j.Logger;
 
 public class SetNameFunction extends LootItemConditionalFunction {
    private static final Logger LOGGER = LogUtils.getLogger();
-   final Component name;
-   @Nullable
-   final LootContext.EntityTarget resolutionContext;
+   public static final Codec<SetNameFunction> CODEC = RecordCodecBuilder.create(
+      var0 -> commonFields(var0)
+            .and(
+               var0.group(
+                  ExtraCodecs.strictOptionalField(ExtraCodecs.COMPONENT, "name").forGetter(var0x -> var0x.name),
+                  ExtraCodecs.strictOptionalField(LootContext.EntityTarget.CODEC, "entity").forGetter(var0x -> var0x.resolutionContext)
+               )
+            )
+            .apply(var0, SetNameFunction::new)
+   );
+   private final Optional<Component> name;
+   private final Optional<LootContext.EntityTarget> resolutionContext;
 
-   SetNameFunction(LootItemCondition[] var1, @Nullable Component var2, @Nullable LootContext.EntityTarget var3) {
+   private SetNameFunction(List<LootItemCondition> var1, Optional<Component> var2, Optional<LootContext.EntityTarget> var3) {
       super(var1);
       this.name = var2;
       this.resolutionContext = var3;
@@ -40,7 +48,7 @@ public class SetNameFunction extends LootItemConditionalFunction {
 
    @Override
    public Set<LootContextParam<?>> getReferencedContextParams() {
-      return this.resolutionContext != null ? ImmutableSet.of(this.resolutionContext.getParam()) : ImmutableSet.of();
+      return this.resolutionContext.<Set<LootContextParam<?>>>map(var0 -> Set.of(var0.getParam())).orElse(Set.of());
    }
 
    public static UnaryOperator<Component> createResolver(LootContext var0, @Nullable LootContext.EntityTarget var1) {
@@ -64,41 +72,15 @@ public class SetNameFunction extends LootItemConditionalFunction {
 
    @Override
    public ItemStack run(ItemStack var1, LootContext var2) {
-      if (this.name != null) {
-         var1.setHoverName(createResolver(var2, this.resolutionContext).apply(this.name));
-      }
-
+      this.name.ifPresent(var3 -> var1.setHoverName(createResolver(var2, this.resolutionContext.orElse(null)).apply(var3)));
       return var1;
    }
 
    public static LootItemConditionalFunction.Builder<?> setName(Component var0) {
-      return simpleBuilder(var1 -> new SetNameFunction(var1, var0, null));
+      return simpleBuilder(var1 -> new SetNameFunction(var1, Optional.of(var0), Optional.empty()));
    }
 
    public static LootItemConditionalFunction.Builder<?> setName(Component var0, LootContext.EntityTarget var1) {
-      return simpleBuilder(var2 -> new SetNameFunction(var2, var0, var1));
-   }
-
-   public static class Serializer extends LootItemConditionalFunction.Serializer<SetNameFunction> {
-      public Serializer() {
-         super();
-      }
-
-      public void serialize(JsonObject var1, SetNameFunction var2, JsonSerializationContext var3) {
-         super.serialize(var1, var2, var3);
-         if (var2.name != null) {
-            var1.add("name", Component.Serializer.toJsonTree(var2.name));
-         }
-
-         if (var2.resolutionContext != null) {
-            var1.add("entity", var3.serialize(var2.resolutionContext));
-         }
-      }
-
-      public SetNameFunction deserialize(JsonObject var1, JsonDeserializationContext var2, LootItemCondition[] var3) {
-         MutableComponent var4 = Component.Serializer.fromJson(var1.get("name"));
-         LootContext.EntityTarget var5 = GsonHelper.getAsObject(var1, "entity", null, var2, LootContext.EntityTarget.class);
-         return new SetNameFunction(var3, var4, var5);
-      }
+      return simpleBuilder(var2 -> new SetNameFunction(var2, Optional.of(var0), Optional.of(var1)));
    }
 }
